--- a/src/app/pages/mainpage/mainpage.html
+++ b/src/app/pages/mainpage/mainpage.html
@@ -1,1 +1,14 @@
-<p>mainpage works!</p>
+<section class="section_banner">
+    <div class="bannerWrap">
+   <div>
+     <h1 class="banner_title">
+    CineMate — твой проводник в мире кино.
+    </h1>
+    <h2 class="banner_title_description"> Сотни историй, тысячи героев. Начни путешествие сейчас.</h2>
+   </div>
+    <form class="banner_form_search">
+        <input  type="text" placeholder="Найти фильм, сериал,персону...."/>
+        <button type="submit">Поиск</button>
+    </form>
+</div>
+</section>
