--- a/src/styles.scss
+++ b/src/styles.scss
@@ -55,3 +55,10 @@ input[type="date"] {
 
 }
 /*--------------------*/
+:root{
+	--dark-color:#000000;
+	--light-color:#ffffff;
+	--black-blue-color:#032541;
+	--gray-color:#b4b4b452;
+
+}
