--- a/src/app/common-ui/navbar/dropdown/dropdown.scss
+++ b/src/app/common-ui/navbar/dropdown/dropdown.scss
@@ -9,8 +9,8 @@
   display: none;
   position: absolute;
   top:18px;
-  background-color: #ffffff;
-  color:#000000;
+  background-color: var(--light-color);
+  color:var(--dark-color);
   font-size: 16px;
   flex-direction: column;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -22,10 +22,10 @@
     padding: 5px 10px;
   }
   &>li:hover{
-    background-color:#b4b4b452;
+    background-color:var(--gray-color);
   }
   &>li>a{
-    color:#000000;
+    color:var(--dark-color);
   }
 }
 
