--- a/src/app/pages/mainpage/mainpage.scss
+++ b/src/app/pages/mainpage/mainpage.scss
@@ -1,10 +1,10 @@
 .section_banner{
 width: 100vw;
-height: 300px;
-// border:1px solid red;
+height: 400px;
+background-size: cover;
+background-position: center;
 padding:50px;
- background:
-    linear-gradient(rgba(0, 123, 255, 0.6), rgba(0, 123, 255, 0.616))
+
 }
 .bannerWrap{
     width: 100%;
@@ -29,18 +29,72 @@ padding:50px;
     display: flex;
     justify-content: space-between;
     input{
-        width:  90%;
+        width: 90%;
         font-size: 16px;
     }
     button{
         width:80px;
         color:var(--light-color);
         padding: 10px;
-                font-size: 16px;
+        font-size: 16px;
         border-radius: 28px;
-background: -webkit-linear-gradient(90deg,#0047cc,#005aff,#3898ff);  background: linear-gradient(90deg,#0047cc,#005aff,#3898ff);
+        background: -webkit-linear-gradient(90deg,#0047cc,#005aff,#3898ff);  background: linear-gradient(90deg,#0047cc,#005aff,#3898ff);
     }
 }
+.section_popular{
+    padding: 30px;
+}
+.popular_header{
+    display: flex;
+    width:500px;
+    height: 40px;
+    align-items:center;
+    gap: 20px;
+    .popular_title{
+        font-size: 34px;
+    }
+}
+.popular_radio-inputs  {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  border-radius: 30px;
+  background-color: transparent;
+  border:1px solid var(--black-blue-color);
+  box-sizing: border-box;
+  box-shadow: 0 0 0px 1px rgba(0, 0, 0, 0.06);
+  width: 300px;
+  font-size: 20px;
+
+
+& .popular_radio {
+  flex: 1 1 auto;
+  text-align: center;
+}
+
+& .popular_radio input {
+  display: none;
+}
+
+& .popular_radio .popular_input-name {
+  display: flex;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  border-radius: 28px;
+  border: none;
+  padding: .5rem 0;
+  color: rgb(54, 85, 51);
+  transition: all .15s ease-in-out;
+}
+
+& .popular_radio input:checked + .popular_input-name {
+  background-color: var(--black-blue-color);
+  color: var(--light-color);
+  font-weight: 600;
+}
+}
+
 
 
 @media screen and (max-width:955px) {
