--- a/src/app/pages/mainpage/mainpage.html
+++ b/src/app/pages/mainpage/mainpage.html
@@ -1,33 +1,43 @@
-<section class="section_banner" [style.background]="bannerImg ?
-'url('+ bannerImg +')' : 'linear-gradient(rgba(0, 123, 255, 0.6), rgba(0, 123, 255, 0.616))' " >
-    <div class="bannerWrap" >
-   <div>
-     <h1 class="banner_title">
-    CineMate — твой проводник в мире кино.
-    </h1>
-    <h2 class="banner_title_description"> Сотни историй, тысячи героев. Начни путешествие сейчас.</h2>
-   </div>
+<section
+  class="section_banner"
+  [style.background]="
+    bannerImg
+      ? 'url(' + bannerImg + ')'
+      : 'linear-gradient(rgba(0, 123, 255, 0.6), rgba(0, 123, 255, 0.616))'
+  "
+>
+  <div class="bannerWrap">
+    <div>
+      <h1 class="banner_title">CineMate — твой проводник в мире кино.</h1>
+      <h2 class="banner_title_description">
+        Сотни историй, тысячи героев. Начни путешествие сейчас.
+      </h2>
+    </div>
     <form class="banner_form_search">
-        <input  type="text" placeholder="Найти фильм, сериал,персону...."/>
-        <button type="submit">Поиск</button>
+      <input type="text" placeholder="Найти фильм, сериал,персону...." />
+      <button type="submit">Поиск</button>
     </form>
-</div>
+  </div>
 </section>
 <section class="section_popular">
-    <div class="popular_header">
-        <span class="popular_title">В тренде</span>
-<div class="popular_radio-inputs">
-  <label class="popular_radio">
-    <input type="radio" name="radio" checked="">
-    <span class="popular_input-name">Сегодня</span>
-  </label>
-  <label class="popular_radio">
-    <input type="radio" name="radio">
-    <span class="popular_input-name">На этой неделе</span>
-  </label>
-</div>
-    </div>
-    <div class="popular_poster-list">
-        <app-poster-item [listPoster]="popularList"></app-poster-item>
-    </div>
+  <div class="popular_header">
+    <span class="popular_title">В тренде</span>
+    <form class="popular_radio-inputs">
+      <label class="popular_radio">
+        <input type="radio" name="radio" checked="" />
+        <span class="popular_input-name">Сегодня</span>
+      </label>
+      <label class="popular_radio">
+        <input type="radio" name="radio" />
+        <span class="popular_input-name">На этой неделе</span>
+      </label>
+    </form>
+  </div>
+  @if (popularList) {
+  <div class="popular_poster-list">
+    @for (item of popularList; track $index) {
+    <app-poster-item [listPoster]="item"></app-poster-item>
+    }
+  </div>
+  }
 </section>
