v.0.5 Update MainPage - create section popular 2

--- a/src/app/common-ui/poster-item/poster-item.html
+++ b/src/app/common-ui/poster-item/poster-item.html
@@ -2,18 +2,22 @@
   <div class="poster_image_wrap">
     <img
       class="poster_image"
-      [src]="'https://image.tmdb.org/t/p/original' + listPoster.poster_path"
+      [src]="'https://image.tmdb.org/t/p/original' + (listPoster.media_type == 'person'? listPoster.profile_path : listPoster.poster_path)"
       alt="`${{ listPoster.id }}`"
     />
-    <div class="poster_vote_average">
-      <span>{{ listPoster.vote_average | number : "1.1-1" }}</span>
+      @if(listPoster.media_type !== 'person'){
+                <div class="poster_vote_average"  [style.background]=" getVoteAverage(listPoster.vote_average)" >
+
+      <span>{{ listPoster.vote_average | number : "1.1-1" }} </span>
     </div>
+        }
+
   </div>
 
   <div class="poster_description">
-    <p class="poster_title">{{ listPoster.title }}</p>
-    <p class="poster_date_release">
-      {{ listPoster.release_date | date : "longDate" }}
+    <p class="poster_title">{{ listPoster.title || listPoster.name }}</p>
+    <p class="poster_date_release"  >
+      {{ listPoster.release_date || listPoster.first_air_date | date : "longDate" }}
     </p>
   </div>
 </div>
