--- a/src/app/common-ui/poster-item/poster-item.scss
+++ b/src/app/common-ui/poster-item/poster-item.scss
@@ -28,7 +28,7 @@
   position: absolute;
   top: 7px;
   right: 7px;
-  border: 1px solid red;
+//   border: 1px solid red;
   border-radius: 50%;
   height: 30px;
   width: 30px;
