v.0.5.1 Update MainPage - create section genres.Add footer

--- a/src/app/pages/mainpage/mainpage.html
+++ b/src/app/pages/mainpage/mainpage.html
@@ -31,6 +31,13 @@
   }
 </section>
 
+<section class="section_genres">
+  @for(genre of genresList;track genre){
+      <app-genre-item [genres]="genre"></app-genre-item>
+  }
+
+</section>
+
 <section class="section_popular">
   <app-content-switcher [contentItems]="contentSwitcher[1]" (selectionChange)="onPopularSelected($event)"></app-content-switcher>
 
