--- a/src/app/common-ui/genre-item/genre-item.html
+++ b/src/app/common-ui/genre-item/genre-item.html
@@ -1,5 +1,5 @@
 <div class="genre_wrap"
-    [style.background-image]=" 'url(' + 'https://image.tmdb.org/t/p/original'+updateGenresData.images+ ')'  "
+    [style.background-image]="'url(' + (updateGenresData.image|imagePipe) + ')'"
 >
     <h3 class="genre_title">
         {{updateGenresData.name | titlecase}}
